<resources>
    <string name="app_name">GramPOReceive</string>
    <string name="enter_username_text">Username</string>
    <string name="login_button">Login</string>
    <string name="enter_password_text">Password</string>
    <string name="enter_purchase_order_number_text">Purchase Order Number</string>
    <string name="enter_account_name_text">Account Name</string>
    <string name="get_purchase_orders_button">Load Purchase Order</string>
    <string name="continue_purchase_order_button">Continue Purchase Order</string>
    <string name="sequence_number_header">Seq No</string>
    <string name="stockcode_header">STOCKCODE</string>
    <string name="description_header">DESCRIPTION</string>
    <string name="qty_required_header">Qty Required</string>
    <string name="qty_supplied_header">Qty Supplied</string>
    <string name="qty_received_header">Qty Received</string>
    <string name="save_order_button">SAVE</string>
    <string name="upload_order_button">UPLOAD</string>
    <string name="order_number_label">Order Number: %1$s </string>
    <string name="account_name_label">Account Name: %1$s </string>
    <string name="account_number_label">Account Number: %1$s </string>
    <string name="order_date_label">Order Date: %1$s </string>
    <string name="you_are_logged_in_as">You are logged in as: </string>
</resources>
